# trad-meets-tech

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
data/processed/: chordless_index.csv  chordy_index.csv  jigs_reels_index.csv
outputs/evaluation/: feature_set_sweep.csv  selfcheck_metrics.json  selfcheck_summary.csv
outputs/interpolated/: chordless_interpolated.csv
outputs/models/: model_metadata.json
scripts/: make_figures.py
src/UNKNOWN.egg-info/: SOURCES.txt
src/scripts/: make_figures.py
src/trad_chords/: __init__.py  cli.py  config.py
src/trad_chords.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/trad_chords/abc/: cleaning.py  parser.py  render.py
src/trad_chords/features/: beat_slots.py  index_builder.py  note_table.py  splitter.py
src/trad_chords/inference/: __init__.py  harmonize.py  interpolate.py
src/trad_chords/io/: fetch.py  loaders.py
src/trad_chords/models/: baseline.py  feature_sets.py  training_data.py
src/trad_chords/music/: __init__.py  theory.py
src/trad_chords/utils/: cache.py
